--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require test/setup.js -- --watch",
+    "test": "mocha --require test/setup.js",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "deploy": "git push heroku master",
+    "migrate": "postgrator --config postgrator-config.js",
+    "seed_articles": "psql -U blogful -f ./seeds/seed.blogful_articles"
   },
   "keywords": [],
   "author": "",
@@ -18,12 +20,15 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
-    "morgan": "^1.9.1"
+    "knex": "^0.20.2",
+    "morgan": "^1.9.1",
+    "pg": "^7.14.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^6.6.0",
     "mocha": "^6.2.2",
+    "postgrator-cli": "^3.2.0",
     "supertest": "^4.0.2"
   }
 }
