--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
     "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
     "seed_articles": "psql -U blogful -f ./seeds/seed.blogful_articles"
   },
   "keywords": [],
