--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "mocha": "^6.2.2",
     "postgrator-cli": "^3.2.0",
     "supertest": "^4.0.2"
+  },
+  "engines": {
+    "node": "10.11.0"
   }
 }
